add instructions link to data.yml

--- a/data.yml
+++ b/data.yml
@@ -79,6 +79,11 @@ messages:
     supported; provide multiline input in multiple code blocks)
 
     - To ping everyone, use "hyperping" or "ping every(body|one)"
+
+
+
+    For a full list of commands, see
+    https://github.com/Vyxal/VyxalBotSE/blob/master/instructions.md
   info: >-
     [GitHub Repository](https://github.com/Vyxal/Vyxal/) | [Online
     Interpreter](https://lyxal.pythonanywhere.com) |
