put instruction commands in the list

--- a/data.yml
+++ b/data.yml
@@ -80,8 +80,7 @@ messages:
 
     - To ping everyone, use "hyperping" or "ping every(body|one)"
 
-
-    For a full list of commands, see
+    - For a full list of commands, see
     https://github.com/Vyxal/VyxalBotSE/blob/master/instructions.md
   info: >-
     [GitHub Repository](https://github.com/Vyxal/Vyxal/) | [Online
