add language bar to helptext

--- a/data.yml
+++ b/data.yml
@@ -87,7 +87,8 @@ messages:
     [Vyxapedia](https://vyxapedia.hyper-neutrino.xyz) | [List of
     elements](https://github.com/Vyxal/Vyxal/blob/master/docs/elements.txt) |
     [Code Page](https://github.com/Vyxal/Vyxal/blob/master/docs/codepage.txt) |
-    [GitHub Organization](https://github.com/Vyxal/)
+    [GitHub Organization](https://github.com/Vyxal/) | [Language
+    Bar](https://abrudz.github.io/lb/vyxal)
   issue-404: >-
     failed to create the issue (404); make sure you have spelled the repository
     name correctly
