--- a/data.yml
+++ b/data.yml
@@ -80,11 +80,10 @@ messages:
     https://github.com/Vyxal/VyxalBotSE/blob/master/instructions.md
   info: >-
     [GitHub Repository](https://github.com/Vyxal/Vyxal/) | [Online
-    Interpreter](https://lyxal.pythonanywhere.com) |
+    Interpreter](https://vyxal.pythonanywhere.com) |
     [Tutorial](https://github.com/Vyxal/Vyxal/blob/master/docs/Tutorial.md) |
     [Vyxapedia](https://vyxapedia.hyper-neutrino.xyz) | [List of
-    elements](https://github.com/Vyxal/Vyxal/blob/master/docs/elements.txt) |
-    [Code Page](https://github.com/Vyxal/Vyxal/blob/master/docs/codepage.txt) |
+    elements](https://github.com/Vyxal/Vyxal/blob/main/documents/knowledge/elements.txt) |
     [GitHub Organization](https://github.com/Vyxal/)
   issue-404: >-
     failed to create the issue (404); make sure you have spelled the repository
