--- a/data.yml
+++ b/data.yml
@@ -83,7 +83,7 @@ messages:
     Interpreter](https://vyxal.pythonanywhere.com) |
     [Tutorial](https://github.com/Vyxal/Vyxal/blob/master/docs/Tutorial.md) |
     [Vyxapedia](https://vyxapedia.hyper-neutrino.xyz) | [List of
-    elements](https://github.com/Vyxal/Vyxal/blob/main/documents/knowledge/elements.txt) |
+    elements](https://github.com/Vyxal/Vyxal/blob/main/documents/knowledge/elements.md) |
     [GitHub Organization](https://github.com/Vyxal/)
   issue-404: >-
     failed to create the issue (404); make sure you have spelled the repository
