--- a/data.yml
+++ b/data.yml
@@ -437,7 +437,7 @@ messages:
     - stargazing. I love the stars
     - the vaccuum. It's too loud for my liking
     - Sudoku puzzles
-    - tying my shoes. Without hands
+    - things like tying my shoes. Without hands
     - nothing. I'd rather enjoy the sights and sounds of a world without you
     - the impossible
     - the chatbot equivalent of a marathon. I'm gonna take this one all the way to Argentina
